Kubernetes_Part/newspaper-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: newspaper-app-service
spec:
  selector:
    app: newspaper-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
